--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@
 }
 
 .options input[type="radio"] {
-  accent-color: white;
+  accent-color: lightgreen;
   transform: scale(1.2);
 }
 
@@ -42,7 +42,7 @@
 
 button {
   background-color: green;
-  color: white;
+  color: lightgreen;
   padding: 12px 24px;
   font-size: 16px;
   border: none;
